# pull-my-ticker

./: .gitignore  AGENTS.MD  AnalystRecommendations.md  Here are the updated files with the changes:stock_analyzer.py  README.md  SDD.md  analyst.export_to_sqlite('stock_analysis.db')  analyst.export_to_sqlite('stocks.db')  analyst.visualize('AAPL')  architecture.puml  config.toml  notes.md  pull_latest.py  pyproject.toml  pytest  requirements.txt  sheet_worker.py  stock_analyzer.py
.github/workflows/: ci.yml
notebooks/: Analysis.ipynb
src/: app.py  predictor.py  pull_latest.py  sheet_worker.py  stock_analyzer.py
tests/: test_sheet_worker.py  test_stock_analyzer.py
