[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pull-my-ticker"
version = "0.1.0"
description = "A simple stock ticker tracking app with analysis and visualization."
authors = [{name = "Michael Eaton", email = "mpeaton@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yfinance==0.2.28",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "ta==0.10.2",
    "plotly==5.15.0",
    "bokeh==3.2.2",
    "openpyxl==3.1.2",
    "schedule==1.2.0",
    "flask==3.0.3",
    "apscheduler==3.10.4",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.0",
    "pytest-mock==3.11.1",
    "coverage==7.3.0",
    "pytest-cov==4.1.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
